# behaviorDNA

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MODEL_CARD.md  README.md  WORK_REVIEW_since_4bfd6cc.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-collector.txt  requirements.txt  ruff.toml
.dvc/: config  config.local
api/: main.py  streaming.py
collector/: build_exe.bat  cheat_sim.py  record_session.py  recorder_gui.py
configs/: training.yaml
dashboard/: app.py  requirements.txt
data/: raw.dvc
docker/: entrypoint.sh
docs/: ADVERSARIAL.md  ARCHITECTURE_COMPARISON.md  CHEAT_DATA_COLLECTION.md  DATASET_CARDS.md  DATA_LAYOUT.md  DEPLOY.md  ETHICS.md  FEATURES.md  FINDINGS.md  LSTM_AE.md  MLOPS.md  MONITORING.md  PRETRAINING.md  RECORDING_INSTRUCTIONS.md  REPORT.md  ROADMAP.md  SIGNALS.md  STREAMING.md  THREAT_MODEL.md  VERIFICATION.md
models/: lstm_ae.pt.dvc  lstm_ae_meta.json  pretrained_contrastive_balabit.pt.dvc  pretrained_contrastive_balabit_meta.json  pretrained_contrastive_balabit_noscale.pt.dvc  pretrained_contrastive_balabit_noscale_meta.json  pretrained_contrastive_captcha.pt.dvc  pretrained_contrastive_captcha_meta.json  pretrained_contrastive_cs2cd_200.pt.dvc  pretrained_contrastive_cs2cd_200_meta.json  pretrained_contrastive_cs2cd_382.pt.dvc  pretrained_contrastive_cs2cd_382_meta.json  pretrained_contrastive_cs2cd_50.pt.dvc  pretrained_contrastive_cs2cd_50_meta.json  pretrained_cs2cd_s1_200.pt.dvc  pretrained_cs2cd_s1_200_meta.json  pretrained_encoder.pt.dvc  (+12 more)
(+153 files in other folders)
